[[bin]]
name = "robonomics"
path = "src/main.rs"

[package]
name = "robonomics"
description = "The Robonomics Network Runtime & Omni Node."
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[workspace.package]
version = "4.0.0"
edition = "2021"
authors = ["Airalab <research@robonomics.network>"]
license = "Apache-2.0"
homepage = "https://robonomics.network"
repository = "https://github.com/airalab/robonomics"

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
color-eyre = { version = "0.6.3", default-features = false }
polkadot-omni-node-lib = "0.10.0"
robonomics-runtime.path = "./runtime/robonomics"
sp-genesis-builder.workspace = true

[dev-dependencies]
assert_cmd = "2.0.14"

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0", default-features = true }

[features]
default = []
runtime-benchmarks = [
  "polkadot-omni-node-lib/runtime-benchmarks",
  "robonomics-runtime/runtime-benchmarks",
]
try-runtime = ["polkadot-omni-node-lib/try-runtime"]

[workspace]
members = [
  "frame/rws",
  "frame/launch",
  "frame/datalog",
  "frame/liability",
  "frame/digital-twin",
  "frame/xcm-info",
  "runtime/robonomics",
]

[workspace.dependencies]
# General deps
# (wasm)
bounded-collections = { version = "0.1.8", default-features = false }
parity-scale-codec = { version = "3.6.1", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
  "derive",
] }
smallvec = { version = "1.11", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
log = { version = "0.4.19", default-features = false }

# (native)
bs58 = "0.5.0"
clap = { version = "4.2.5", features = ["derive"] }
color-print = "0.3.4"
futures = { version = "0.3.21", features = ["thread-pool"] }
serde = { version = "1.0.171", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1.0.138", default-features = false }
jsonrpsee = { version = "0.24.7", features = ["server"] }
thiserror = "1.0.43"
async-trait = "0.1.71"

# Substrate
# (wasm)
sp-core = { version = "38.1.0", default-features = false }
sp-io = { version = "43.0.0", default-features = false }
sp-runtime = { version = "44.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-api = { version = "39.0.0", default-features = false }
sp-arithmetic = { version = "28.0.0", default-features = false }
sp-block-builder = { version = "39.0.0", default-features = false }
sp-consensus-aura = { version = "0.45.0", default-features = false }
sp-inherents = { version = "39.0.0", default-features = false }
sp-offchain = { version = "39.0.0", default-features = false }
sp-runtime-interface = { version = "32.0.0", default-features = false }
sp-session = { version = "41.0.0", default-features = false }
sp-transaction-pool = { version = "39.0.0", default-features = false }
sp-version = { version = "42.0.0", default-features = false }
sp-weights = { version = "33.1.0", default-features = false }
sp-genesis-builder = { version = "0.20.0", default-features = false }
sp-keyring = { version = "44.0.0", default-features = false }

# (native)
frame-benchmarking-cli = { version = "51.0.0" }
pallet-transaction-payment-rpc = { version = "46.0.0" }
substrate-build-script-utils = { version = "11.0.0" }
substrate-frame-rpc-system = { version = "47.0.0" }
substrate-prometheus-endpoint = { version = "0.17.7" }
sc-basic-authorship = { version = "0.52.0" }
sc-cli = { version = "0.55.0" }
sc-client-api = { version = "42.0.0" }
sc-chain-spec = { version = "46.0.0" }
sc-consensus = { version = "0.52.0" }
sc-consensus-aura = { version = "0.53.0" }
sc-consensus-grandpa = { version = "0.38.0" }
sc-executor = { version = "0.45.0" }
sc-offchain = { version = "48.0.0" }
sc-finality-grandpa = { version = "0.24.0" }
sc-keystore = { version = "38.0.0" }
sc-network = { version = "0.53.0" }
sc-network-sync = { version = "0.52.0" }
sc-rpc = { version = "48.0.0" }
sc-rpc-api = { version = "0.52.0" }
sc-service = { version = "0.54.0" }
sc-storage-monitor = { version = "0.26.1" }
sc-sysinfo = { version = "45.0.0" }
sc-telemetry = { version = "30.0.0" }
sc-tracing = { version = "42.0.0" }
sc-transaction-pool = { version = "42.0.0" }
sc-transaction-pool-api = { version = "42.0.0" }
sp-blockchain = { version = "42.0.0" }
sp-consensus = { version = "0.45.0" }
sp-consensus-grandpa = { version = "26.0.0" }
sp-keystore = { version = "0.44.1" }
sp-timestamp = { version = "39.0.0" }
try-runtime-cli = { version = "0.42.0" }

# Substrate pallets
# (wasm)
pallet-balances = { version = "44.0.0", default-features = false }
frame-support = { version = "43.0.0", default-features = false }
frame-system = { version = "43.0.0", default-features = false }
frame-executive = { version = "43.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.11.0", default-features = false }
frame-system-rpc-runtime-api = { version = "39.0.0", default-features = false }
pallet-assets = { version = "46.0.0", default-features = false }
pallet-aura = { version = "42.0.0", default-features = false }
pallet-authorship = { version = "43.0.0", default-features = false }
pallet-collective = { version = "43.0.0", default-features = false }
pallet-collator-selection = { version = "24.0.0", default-features = false }
pallet-democracy = { version = "43.0.0", default-features = false }
pallet-membership = { version = "43.0.0", default-features = false }
pallet-message-queue = { version = "46.0.0", default-features = false }
pallet-multisig = { version = "43.0.0", default-features = false }
pallet-migrations = { version = "13.0.0", default-features = false }
pallet-preimage = { version = "43.0.0", default-features = false }
pallet-scheduler = { version = "44.0.0", default-features = false }
pallet-session = { version = "43.0.0", default-features = false }
pallet-state-trie-migration = { version = "48.0.0", default-features = false }
pallet-treasury = { version = "42.0.0", default-features = false }
pallet-utility = { version = "43.0.0", default-features = false }
pallet-vesting = { version = "43.0.0", default-features = false }
pallet-sudo = { version = "43.0.0", default-features = false }
pallet-timestamp = { version = "42.0.0", default-features = false }
pallet-transaction-payment = { version = "43.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "43.0.0", default-features = false }
pallet-identity = { version = "43.0.0", default-features = false }
frame-benchmarking = { version = "43.0.0", default-features = false }
frame-system-benchmarking = { version = "43.0.0", default-features = false }
frame-try-runtime = { version = "0.49.0", default-features = false }
pallet-grandpa = { version = "43.0.0", default-features = false }
sp-staking = { version = "41.0.0", default-features = false }
pallet-xcm = { version = "23.0.0", default-features = false }
parachains-common = { version = "25.0.0", default-features = false }

# Cumulus
# (native)
cumulus-client-cli = { version = "0.26.0" }
cumulus-client-consensus-common = { version = "0.26.0" }
cumulus-client-consensus-relay-chain = { version = "0.26.0" }
cumulus-client-network = { version = "0.26.0" }
cumulus-client-service = { version = "0.28.0" }
cumulus-client-parachain-inherent = { version = "0.20.0" }
cumulus-primitives-parachain-inherent = { version = "0.21.0" }
cumulus-relay-chain-interface = { version = "0.26.0" }
cumulus-relay-chain-rpc-interface = { version = "0.26.0" }

# Cumulus
# (wasm)
cumulus-pallet-aura-ext = { version = "0.23.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.23.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.23.0", default-features = false }
cumulus-pallet-xcm = { version = "0.22.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.23.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "24.0.0", default-features = false }
cumulus-pallet-weight-reclaim = { version = "0.5.0", default-features = false }
cumulus-primitives-aura = { version = "0.20.0", default-features = false }
cumulus-primitives-core = { version = "0.21.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.22.0", default-features = false }
cumulus-primitives-utility = { version = "0.23.0", default-features = false }
parachain-info = { version = "0.23.0", package = "staging-parachain-info", default-features = false }

# Polkadot
# (native)
polkadot-cli = { version = "28.0.1" }

# Polkadot
# (wasm)
polkadot-runtime-parachains = { version = "22.0.0", default-features = false }
polkadot-primitives = { version = "21.0.0", default-features = false }
polkadot-parachain-primitives = { version = "19.0.0", default-features = false }
polkadot-runtime-common = { version = "22.0.0", default-features = false }
xcm = { version = "19.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "23.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "22.0.0", package = "staging-xcm-executor", default-features = false }

# Substrate build deps
substrate-wasm-builder = "29.0.0"

# Robonomics pallets
pallet-robonomics-datalog = { path = "./frame/datalog", default-features = false }
pallet-robonomics-digital-twin = { path = "./frame/digital-twin", default-features = false }
pallet-robonomics-launch = { path = "./frame/launch", default-features = false }
pallet-robonomics-liability = { path = "./frame/liability", default-features = false }
pallet-robonomics-rws = { path = "./frame/rws", default-features = false }
