[[bin]]
name = "robonomics"
path = "src/main.rs"

[package]
name = "robonomics"
description = "The Robonomics Network node."
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[workspace.package]
version = "3.3.7"
edition = "2021"
authors = ["Airalab <research@robonomics.network>"]
license = "Apache-2.0"
homepage = "https://robonomics.network"
repository = "https://github.com/airalab/robonomics"

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
color-eyre = { version = "0.6.1", default-features = false }
tikv-jemallocator = "0.5.0"
robonomics-node = { path = "node" }

[features]
runtime-benchmarks = ["robonomics-node/runtime-benchmarks"]
jemalloc-allocator = []

[workspace]
members = [
  "frame/rws",
  "frame/launch",
  "frame/datalog",
  "frame/liability",
  "frame/lighthouse",
  "frame/digital-twin",
  "frame/xcm-info",
  "primitives",
  "runtime/dev",
  "runtime/main",
  "node/rpc/core",
  "node/service",
  "node",
]

[workspace.dependencies]
# General deps
# (wasm)
bounded-collections = { version = "0.1.8", default-features = false }
parity-scale-codec = { version = "3.6.1", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
  "derive",
] }
smallvec = { version = "1.11", default-features = false }
log = { version = "0.4.19", default-features = false }

# (native)
bs58 = "0.5.0"
clap = { version = "4.2.5", features = ["derive"] }
color-print = "0.3.4"
futures = { version = "0.3.21", features = ["thread-pool"] }
hex-literal = "0.3.4"
serde = { version = "1.0.171", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
thiserror = "1.0.43"
async-trait = "0.1.71"

# Substrate
# (wasm)
sp-core = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-io = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-runtime = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-std = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-api = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-arithmetic = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-block-builder = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-inherents = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-offchain = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-runtime-interface = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-session = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-version = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-weights = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }

# (native)
frame-benchmarking-cli = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
substrate-build-script-utils = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
substrate-frame-rpc-system = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
substrate-prometheus-endpoint = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-basic-authorship = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-cli = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-client-api = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-chain-spec = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-consensus = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-consensus-aura = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-consensus-grandpa = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-executor = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-offchain = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-finality-grandpa = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-keystore = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-network = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-network-sync = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-rpc = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-rpc-api = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-service = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-storage-monitor = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-sysinfo = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-telemetry = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-tracing = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-transaction-pool = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sc-transaction-pool-api = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sp-blockchain = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sp-consensus = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sp-consensus-grandpa = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sp-keystore = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sp-keyring = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
sp-timestamp = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
try-runtime-cli = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }

# Substrate pallets 
# (wasm)
pallet-balances = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-support = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-system = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-executive = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-assets = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-aura = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-collective = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-democracy = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-membership = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-multisig = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-preimage = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-scheduler = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-treasury = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-utility = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-vesting = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-sudo = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-timestamp = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-identity = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-benchmarking = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-system-benchmarking = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-try-runtime = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
pallet-grandpa = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-staking = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0", default-features = false }

# Cumulus
# (native)
cumulus-client-cli = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-consensus-common = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-network = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0" }
cumulus-client-service = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0" }
cumulus-relay-chain-interface = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0" }

# Cumulus
# (wasm)
cumulus-pallet-dmp-queue = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-primitives-core = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0", default-features = false }
parachain-info = { git = "https://github.com/airalab/cumulus", branch = "polkadot-v1.0.0", default-features = false }

# Polkadot 
# (native)
polkadot-cli = { git = "https://github.com/airalab/polkadot", branch = "release-v1.0.0" }

# Polkadot 
# (wasm)
polkadot-parachain = { git = "https://github.com/airalab/polkadot", branch = "release-v1.0.0", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/airalab/polkadot", branch = "release-v1.0.0", default-features = false }
polkadot-primitives = { git = "https://github.com/airalab/polkadot", branch = "release-v1.0.0", default-features = false }
xcm = { git = "https://github.com/airalab/polkadot", branch = "release-v1.0.0", default-features = false }
xcm-builder = { git = "https://github.com/airalab/polkadot", branch = "release-v1.0.0", default-features = false }
xcm-executor = { git = "https://github.com/airalab/polkadot", branch = "release-v1.0.0", default-features = false }

# Build deps
substrate-wasm-builder = { git = "https://github.com/airalab/substrate", branch = "polkadot-v1.0.0" }
