[workspace.package]
version = "4.1.0"
edition = "2021"
authors = ["Airalab <research@robonomics.network>"]
license = "Apache-2.0"
homepage = "https://robonomics.network"
repository = "https://github.com/airalab/robonomics"

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace]
members = [
  "bin/robonomics",
  "frame/rws",
  "frame/launch",
  "frame/datalog",
  "frame/liability",
  "frame/digital-twin",
  "frame/xcm-info",
  "frame/cps",
  "frame/cps/rpc",
  "frame/cps/rpc/runtime-api",
  "frame/wrapped-asset",
  "runtime/robonomics",
  "tools/libcps",
]
resolver = "2"

[workspace.dependencies]
# General deps
# (wasm)
bounded-collections = { version = "0.1.8", default-features = false }
parity-scale-codec = { version = "3.6.1", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
  "derive",
] }
smallvec = { version = "1.11", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
log = { version = "0.4.19", default-features = false }

# (native)
bs58 = "0.5.0"
clap = { version = "4.2.5", features = ["derive"] }
color-print = "0.3.4"
futures = { version = "0.3.21", features = ["thread-pool"] }
serde = { version = "1.0.171", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1.0.138", default-features = false }
jsonrpsee = { version = "0.24.7", features = ["server"] }
thiserror = "1.0.43"
async-trait = "0.1.71"
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
env_logger = "0.11"

# Cryptography (for libcps)
curve25519-dalek = "4.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Blockchain (for libcps)
# NOTE: subxt and subxt-signer are intentionally pinned to 0.43.x for
# compatibility with the existing libcps code and target chain runtime.
# Upgrading to 0.44+ requires coordinated refactoring and will be done
# in a separate change.
subxt = "0.43.1"
subxt-signer = "0.43.0"

# Serialization (for libcps)
base64 = "0.22"
hex = "0.4"
toml = "0.9"

# MQTT (for libcps)
rumqttc = "0.25"

# CLI (for libcps)
colored = "3.1"
chrono = "0.4"
indicatif = "0.18"
color-eyre = { version = "0.6.3", default-features = false }
polkadot-omni-node-lib = { version = "0.13.0" }
assert_cmd = "2.0.14"
easy-hex = "1.0"

# Substrate
# (wasm)
sp-core = { version = "39.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-api = { version = "40.0.0", default-features = false }
sp-arithmetic = { version = "28.0.0", default-features = false }
sp-block-builder = { version = "40.0.0", default-features = false }
sp-consensus-aura = { version = "0.46.0", default-features = false }
sp-inherents = { version = "40.0.0", default-features = false }
sp-offchain = { version = "40.0.0", default-features = false }
sp-runtime-interface = { version = "33.0.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-state-machine = { version = "0.49.0", default-features = false }
sp-tracing = { version = "19.0.0", default-features = false }
sp-transaction-pool = { version = "40.0.0", default-features = false }
sp-version = { version = "43.0.0", default-features = false }
sp-weights = { version = "33.2.0", default-features = false }
sp-genesis-builder = { version = "0.21.0", default-features = false }
sp-keyring = { version = "45.0.0", default-features = false }

# (native)
frame-benchmarking-cli = { version = "53.0.0" }
pallet-transaction-payment-rpc = { version = "48.0.0" }
substrate-build-script-utils = { version = "11.0.0" }
substrate-frame-rpc-system = { version = "49.0.0" }
substrate-prometheus-endpoint = { version = "0.17.7" }
sc-basic-authorship = { version = "0.53.0" }
sc-cli = { version = "0.57.0" }
sc-client-api = { version = "44.0.0" }
sc-chain-spec = { version = "48.0.0" }
sc-consensus = { version = "0.54.0" }
sc-consensus-aura = { version = "0.55.0" }
sc-consensus-grandpa = { version = "0.40.0" }
sc-executor = { version = "0.47.0" }
sc-executor-common = { version = "0.43.0" }
sc-offchain = { version = "50.0.0" }
sc-finality-grandpa = { version = "0.24.0" }
sc-keystore = { version = "39.0.0" }
sc-network = { version = "0.55.1" }
sc-network-sync = { version = "0.54.0" }
sc-rpc = { version = "50.0.0" }
sc-rpc-api = { version = "0.54.0" }
sc-service = { version = "0.56.0" }
sc-storage-monitor = { version = "0.27.0" }
sc-sysinfo = { version = "46.0.0" }
sc-telemetry = { version = "30.0.0" }
sc-tracing = { version = "44.0.0" }
sc-transaction-pool = { version = "44.1.0" }
sc-transaction-pool-api = { version = "43.0.0" }
sp-blockchain = { version = "43.0.0" }
sp-consensus = { version = "0.46.0" }
sp-consensus-grandpa = { version = "27.0.0" }
sp-keystore = { version = "0.45.0" }
sp-maybe-compressed-blob = { version = "11.1.0" }
sp-timestamp = { version = "40.0.0" }
try-runtime-cli = { version = "0.42.0" }

# Substrate pallets
# (wasm)
pallet-balances = { version = "46.0.0", default-features = false }
frame-support = { version = "45.1.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
frame-executive = { version = "45.0.1", default-features = false }
frame-metadata-hash-extension = { version = "0.13.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0.0", default-features = false }
pallet-assets = { version = "48.1.0", default-features = false }
pallet-aura = { version = "44.0.0", default-features = false }
pallet-authorship = { version = "45.0.0", default-features = false }
pallet-collective = { version = "45.0.0", default-features = false }
pallet-collator-selection = { version = "26.0.0", default-features = false }
pallet-democracy = { version = "45.0.0", default-features = false }
pallet-membership = { version = "45.0.0", default-features = false }
pallet-message-queue = { version = "48.0.0", default-features = false }
pallet-multisig = { version = "45.0.0", default-features = false }
pallet-migrations = { version = "15.0.0", default-features = false }
pallet-preimage = { version = "45.0.0", default-features = false }
pallet-proxy = { version = "45.0.0", default-features = false }
pallet-scheduler = { version = "46.0.0", default-features = false }
pallet-session = { version = "45.0.0", default-features = false }
pallet-treasury = { version = "44.0.0", default-features = false }
pallet-utility = { version = "45.0.0", default-features = false }
pallet-vesting = { version = "45.0.0", default-features = false }
pallet-sudo = { version = "45.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
pallet-transaction-payment = { version = "45.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0.0", default-features = false }
pallet-identity = { version = "45.0.0", default-features = false }
frame-benchmarking = { version = "45.0.1", default-features = false }
frame-system-benchmarking = { version = "45.0.0", default-features = false }
frame-try-runtime = { version = "0.51.0", default-features = false }
pallet-grandpa = { version = "45.0.0", default-features = false }
sp-staking = { version = "42.1.0", default-features = false }
pallet-xcm = { version = "25.0.0", default-features = false }
parachains-common = { version = "27.1.0", default-features = false }

# Cumulus
# (native)
cumulus-client-cli = { version = "0.28.0" }
cumulus-client-consensus-common = { version = "0.28.0" }
cumulus-client-consensus-relay-chain = { version = "0.28.0" }
cumulus-client-network = { version = "0.28.0" }
cumulus-client-service = { version = "0.31.0" }
cumulus-client-parachain-inherent = { version = "0.22.0" }
cumulus-primitives-parachain-inherent = { version = "0.23.0" }
cumulus-relay-chain-interface = { version = "0.28.0" }
cumulus-relay-chain-rpc-interface = { version = "0.28.0" }

# Cumulus
# (wasm)
cumulus-pallet-aura-ext = { version = "0.25.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.25.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.25.0", default-features = false }
cumulus-pallet-xcm = { version = "0.24.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.25.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "26.0.0", default-features = false }
cumulus-pallet-weight-reclaim = { version = "0.7.0", default-features = false }
cumulus-primitives-aura = { version = "0.21.0", default-features = false }
cumulus-primitives-core = { version = "0.23.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.24.0", default-features = false }
cumulus-primitives-utility = { version = "0.25.0", default-features = false }
parachain-info = { version = "0.25.0", package = "staging-parachain-info", default-features = false }

# Polkadot
# (native)
polkadot-cli = { version = "31.0.0" }

# Polkadot
# (wasm)
polkadot-runtime-parachains = { version = "24.0.0", default-features = false }
polkadot-primitives = { version = "22.0.0", default-features = false }
polkadot-parachain-primitives = { version = "20.0.0", default-features = false }
polkadot-runtime-common = { version = "24.0.0", default-features = false }
xcm = { version = "21.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "25.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "24.0.0", package = "staging-xcm-executor", default-features = false }
xcm-runtime-apis = { version = "0.12.0", default-features = false }

# Substrate build deps
substrate-wasm-builder = "31.1.0"

# Robonomics pallets
pallet-robonomics-datalog = { path = "./frame/datalog", default-features = false }
pallet-robonomics-digital-twin = { path = "./frame/digital-twin", default-features = false }
pallet-robonomics-launch = { path = "./frame/launch", default-features = false }
pallet-robonomics-liability = { path = "./frame/liability", default-features = false }
pallet-robonomics-rws = { path = "./frame/rws", default-features = false }
pallet-robonomics-cps = { path = "./frame/cps", default-features = false }
pallet-wrapped-asset = { path = "./frame/wrapped-asset", default-features = false }

# Robonomics runtimes
robonomics-runtime = { path = "./runtime/robonomics" }
