[package]
name = "chain-rpc-ros"
version = "0.1.0"
authors = [ "Airalab <research@aira.life>" ]
edition = "2018"

[dependencies]
log = "0.4"
bs58 = "0.2"
rosbag = "0.2"
futures = "0.1"
ipfs-api = "0.5"
lazy_static = "1.2"
rosrust = "0.8.0"
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate" }
service = { package = "substrate-service", git = "https://github.com/paritytech/substrate" }
network = { package = "substrate-network", git = "https://github.com/paritytech/substrate" }
keystore = { package = "substrate-keystore", git = "https://github.com/paritytech/substrate" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate" }
robonomics-runtime = { path = "../runtime" }
