[package]
name = "robonomics-cli"
description = "Robonomics Framework console line interfaces."
version = "0.9.0"
authors = ["Airalab <research@aira.life>"]
edition = "2018"

[dependencies]
robonomics-protocol = { path = "../protocol" }
robonomics-io = { path = "../io" }
derive_more = "0.99.11"
structopt = "0.3.8"
futures = "0.3.8"
serde_json = "1.0.0"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "io-std", "io-util"] }
bincode = "1.3"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
log = "0.4.11"
hex = "0.4.2"
csv = "1.1.5"

[features]
default = []
# ros = [
#     "robonomics-io/ros",
# ]
