[package]
name = "node-executor"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."

[dependencies]
hex-literal = "0.1"
trie-root = { git = "https://github.com/paritytech/trie" }
parity-codec = "2.0"
sr-io = { git = "https://github.com/paritytech/substrate" }
substrate-state-machine = { git = "https://github.com/paritytech/substrate" }
substrate-executor = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-trie = { git = "https://github.com/paritytech/substrate" }
node-primitives = { path = "../primitives" }
node-runtime = { path = "../runtime" }
