[package]
name = "robonomics-io"
description = "Robonomics framework I/O operations."
version = "0.11.0"
authors = ["Airalab <research@aira.life>"]
edition = "2018"

[dependencies]
robonomics-protocol = { path = "../protocol" }
ipfs-api = { version = "0.11.0", features = ["with-hyper-rustls"], default-features = false }
tokio = { version = "1.8.0", features = ["rt-multi-thread", "io-std", "io-util"] }
async-compat = "0.2"
futures-timer = "3.0.2"
derive_more = "0.99.11"
sp-core = "3.0.0"
futures = "0.3.15"
sds011 = "0.2.1"
serde = "1.0.106"
log = "0.4.11"

# ROS integration 
substrate-ros-msgs = { path = "../substrate-ros/msgs", optional = true }
rosrust = { version = "0.9", optional = true }

[features]
default = []
# Enable ROS features
ros = [
    "substrate-ros-msgs",
    "rosrust",
]
