[package]
name = "robonomics-io"
description = "Robonomics framework I/O operations."
version = "0.11.0"
authors = ["Airalab <research@aira.life>"]
edition = "2021"

[dependencies]
robonomics-protocol = { path = "../protocol" }
ipfs-api = { version = "0.10.0", features = ["with-hyper-rustls"], default-features = false }
async-std = "1.9"
futures-timer = "3.0.2"
derive_more = "0.99.11"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
futures = "0.3.15"
sds011 = "0.2.1"
serde = "1.0.130"
log = "0.4.11"

bincode = "1.3.3"
chrono = "0.4"
libp2p = " 0.38.0"
rust-base58  = "0.0.4"
env_logger = "0.6.0"

# ROS integration
substrate-ros-msgs = { path = "../substrate-ros/msgs", optional = true }
rosrust = { version = "0.9", optional = true }

[features]
default = []
# Enable ROS features
ros = [
    "substrate-ros-msgs",
    "rosrust",
]
